<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.example.lifehousekeeper.ui.forgetPassword.ResetPasswordContract.View"
            />
        <variable
            name="data"
            type="com.example.lifehousekeeper.util.api.ResetPassword" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.forgetPassword.ResetPasswordActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/registershape"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/account"
                android:textStyle="bold"
                android:textSize="25sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:maxLength="30"
                android:text="@={data.account}"
                android:hint="@string/hintGmail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <LinearLayout
            android:id="@+id/passL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/registershape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="25sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@={data.password}"
                android:hint="@string/inputFormat"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passL2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="104dp"
            android:background="@drawable/registershape"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/newPassword"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:hint="@string/passwordAgain"
                android:maxLength="16"
                android:text="@={data.newPasswd}" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <LinearLayout
            android:id="@+id/loginL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/deepGrey"
                android:onClick="@{()-> view.resetPasswordClick()}"
                android:text="@string/send"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>