<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.example.lifehousekeeper.ui.newEvent.AddEventContract.View" />
        <variable
            name="data"
            type="com.example.lifehousekeeper.util.api.EventData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newEvent.AddEventActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="編輯事件內容"
                app:titleMarginStart="100dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:navigationIcon="?attr/actionModeCloseDrawable" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/addeventshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:background="#CACACA"
                android:text="@string/subject"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={data.subject}"
                android:hint="@string/inputSubject" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/addeventshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <TextView
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:background="#CACACA"
                android:text="@string/payForMoney"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={data.costStr}"
                android:hint="@string/dollars" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/addeventshape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="#CACACA"
                android:gravity="center"
                android:text="@string/eventDES"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@={data.event}"
                android:hint="@string/inputEventDes" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <Button
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:text="@string/clear"
                android:onClick="@{()->view.onClearClick()}" />

            <Button
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="70dp"
                android:onClick="@{()->view.onAddEventClick()}"
                android:text="@string/postEvent" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>