<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.example.lifehousekeeper.ui.register.RegisterContract.View" />
        <variable
            name="data"
            type="com.example.lifehousekeeper.util.api.RegisterUser" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF4F4"
        tools:context=".ui.register.RegisterActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/registershape"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/account"
                android:textStyle="bold"
                android:textSize="25sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:maxLength="30"
                android:text="@={data.account}"
                android:hint="@string/hintGmail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <LinearLayout
            android:id="@+id/passL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/registershape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <TextView
                android:id="@+id/textView"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="25sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@={data.password}"
                android:hint="@string/inputFormat"
                android:maxLength="16" />
        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <LinearLayout
            android:id="@+id/loginL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:onClick="@{()-> view.register()}"
                android:text="@string/register"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <LinearLayout
            android:id="@+id/buttonL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:onClick="@{()-> view.sendEmailClick()}"
                android:text="@string/sendemail"
                android:textColor="@color/lightBlue"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>